Fix spacing for submit button

--- a/src/styles/_ShoppingBag.scss
+++ b/src/styles/_ShoppingBag.scss
@@ -7,6 +7,7 @@
   min-height: 100vh;
   width: 100%;
   margin: 0;
+  flex: 1;
 
   h2,
   h3,
@@ -62,6 +63,10 @@
     align-self: center;
     text-decoration: none;
     margin: 1rem;
+  }
+
+  .bag__button-submit {
+    margin-top: 3rem;
   }
 }
 
